@@ -1,3 +1,9 @@
+2011-09-01  Sergio Martin <sergio.martin@artica.es>
+
+	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added delete_pending
+	cleaning in the modules table to avoid possible past modules with
+	wrong name
+
 2011-08-31  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* godmode/massive/massive_edit_modules.php: fixed when is selected "any"
